tests/compile_fail/ktstr_test_float_not_float.rs
use ktstr::ktstr_test;

#[ktstr_test(max_spread_pct = "high")]
fn bad(_ctx: &ktstr::scenario::Ctx) -> anyhow::Result<ktstr::assert::AssertResult> {
    Ok(ktstr::assert::AssertResult::pass())
}

fn main() {}
