tests/compile_fail/ktstr_test_float_not_float.stderr
error: expected float literal for max_spread_pct
 --> tests/compile_fail/ktstr_test_float_not_float.rs:3:31
  |
3 | #[ktstr_test(max_spread_pct = "high")]
  |                               ^^^^^^
